CRUD API for user cluster addons
