# api/pkg/handler/routes_v1_sys11.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"github.com/kubermatic/kubermatic/api/pkg/handler/v1/addon"
 	"net/http"
 
 	"github.com/go-kit/kit/endpoint"
@@ -36,6 +37,27 @@ func (r Routing) RegisterV1SysEleven(mux *mux.Router) {
 	mux.Methods(http.MethodGet).
 		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/oidckubeconfig").
 		Handler(r.getOidcClusterKubeconfig())
+
+	mux.Methods(http.MethodPost).
+		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons").
+		Handler(r.createAddon())
+
+	mux.Methods(http.MethodGet).
+		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons").
+		Handler(r.listAddons())
+
+	mux.Methods(http.MethodGet).
+		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id}").
+		Handler(r.getAddon())
+
+	mux.Methods(http.MethodPatch).
+		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id}").
+		Handler(r.patchAddon())
+
+	mux.Methods(http.MethodDelete).
+		Path("/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id}").
+		Handler(r.deleteAddon())
+
 }
 
 // swagger:route GET /api/v1/providers/openstack/images openstack listOpenstackImages
@@ -158,6 +180,148 @@ func (r Routing) getOidcClusterKubeconfig() http.Handler {
 		)(cluster.GetOidcKubeconfigEndpoint(r.projectProvider)),
 		cluster.DecodeGetAdminKubeconfig,
 		cluster.EncodeKubeconfig,
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route POST /api/v1/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons addon createAddon
+//
+//     Creates an addon that will belong to the given cluster
+//
+//     Consumes:
+//     - application/json
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       201: Addon
+//       401: empty
+//       403: empty
+func (r Routing) createAddon() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			middleware.TokenVerifier(r.tokenVerifiers),
+			middleware.UserSaver(r.userProvider),
+			middleware.Datacenter(r.clusterProviders, r.datacenters),
+			middleware.Addons(r.addonProviders),
+			middleware.UserInfoExtractor(r.userProjectMapper),
+		)(addon.CreateAddonEndpoint(r.projectProvider)),
+		addon.DecodeCreateAddon,
+		setStatusCreatedHeader(encodeJSON),
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route GET /api/v1/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons addon listAddons
+//
+//     Lists addons that belong to the given cluster
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: []Addon
+//       401: empty
+//       403: empty
+func (r Routing) listAddons() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			middleware.TokenVerifier(r.tokenVerifiers),
+			middleware.UserSaver(r.userProvider),
+			middleware.Datacenter(r.clusterProviders, r.datacenters),
+			middleware.Addons(r.addonProviders),
+			middleware.UserInfoExtractor(r.userProjectMapper),
+		)(addon.ListAddonEndpoint(r.projectProvider)),
+		addon.DecodeListAddons,
+		encodeJSON,
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route GET /api/v1/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id} addon getAddon
+//
+//     Gets an addon that is assigned to the given cluster.
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: Addon
+//       401: empty
+//       403: empty
+func (r Routing) getAddon() http.Handler {
+
+	return httptransport.NewServer(
+		endpoint.Chain(
+			middleware.TokenVerifier(r.tokenVerifiers),
+			middleware.UserSaver(r.userProvider),
+			middleware.Datacenter(r.clusterProviders, r.datacenters),
+			middleware.Addons(r.addonProviders),
+			middleware.UserInfoExtractor(r.userProjectMapper),
+		)(addon.GetAddonEndpoint(r.projectProvider)),
+		addon.DecodeGetAddon,
+		encodeJSON,
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route PATCH /api/v1/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id} addon patchAddon
+//
+//     Patches an addon that is assigned to the given cluster.
+//
+//     Consumes:
+//     - application/json
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: Addon
+//       401: empty
+//       403: empty
+func (r Routing) patchAddon() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			middleware.TokenVerifier(r.tokenVerifiers),
+			middleware.UserSaver(r.userProvider),
+			middleware.Datacenter(r.clusterProviders, r.datacenters),
+			middleware.Addons(r.addonProviders),
+			middleware.UserInfoExtractor(r.userProjectMapper),
+		)(addon.PatchAddonEndpoint(r.projectProvider)),
+		addon.DecodePatchAddon,
+		encodeJSON,
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route DELETE /api/v1/projects/{project_id}/dc/{dc}/clusters/{cluster_id}/addons/{addon_id} project deleteAddon
+//
+//    Deletes the given addon that belongs to the cluster.
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: empty
+//       401: empty
+//       403: empty
+func (r Routing) deleteAddon() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			middleware.TokenVerifier(r.tokenVerifiers),
+			middleware.UserSaver(r.userProvider),
+			middleware.Datacenter(r.clusterProviders, r.datacenters),
+			middleware.Addons(r.addonProviders),
+			middleware.UserInfoExtractor(r.userProjectMapper),
+		)(addon.DeleteAddonEndpoint(r.projectProvider)),
+		addon.DecodeGetAddon,
+		encodeJSON,
 		r.defaultServerOptions()...,
 	)
 }
